...
    @Binding var text: String
    var suggestions: [String]
    var onSelection: (String) -> Void
    
    var body: some View {
        VStack {
            TextField("Search for a country", text: $text)
                .padding()
                .background(RoundedRectangle(cornerRadius: 10).fill(Color.white))
                .shadow(radius: 5)
                .padding()
                .onSubmit {
                    hideKeyboard()
...
