...
                    }
                }
            }
            .onAppear {
                viewModel.loadCountries()
            }
            .navigationTitle("Countries")
            .sheet(isPresented: $coordinator.isDetailViewPresented) {
                if let selectedCountry = coordinator.selectedCountry {
                    DetailView(viewModel: DetailViewModel(country: selectedCountry))
                }
            }
            .alert(isPresented: $viewModel.isPermissionDenied) {
...
